PRAGMA foreign_keys = ON;

CREATE TABLE IF NOT EXISTS Graphs (
  GraphID INTEGER PRIMARY KEY,
  GraphName TEXT NOT NULL UNIQUE,
  Description TEXT NOT NULL
);

CREATE TABLE IF NOT EXISTS Nodes (
  NodeID INTEGER PRIMARY KEY,
  NodeType TEXT NOT NULL CHECK (NodeType IN ('Author', 'Institution', 'Publication', 'Venue')),
  DisplayLabel TEXT NOT NULL,
  CreatedAt TEXT NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS Authors (
  NodeID INTEGER PRIMARY KEY,
  FullName TEXT NOT NULL,
  ResearchArea TEXT NOT NULL,
  Email TEXT NOT NULL UNIQUE,
  FOREIGN KEY (NodeID) REFERENCES Nodes (NodeID) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS Institutions (
  NodeID INTEGER PRIMARY KEY,
  Name TEXT NOT NULL,
  Country TEXT NOT NULL,
  FOREIGN KEY (NodeID) REFERENCES Nodes (NodeID) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS Publications (
  NodeID INTEGER PRIMARY KEY,
  Title TEXT NOT NULL,
  PublicationYear INTEGER NOT NULL,
  DOI TEXT NOT NULL UNIQUE,
  FOREIGN KEY (NodeID) REFERENCES Nodes (NodeID) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS Venues (
  NodeID INTEGER PRIMARY KEY,
  Name TEXT NOT NULL,
  VenueKind TEXT NOT NULL CHECK (VenueKind IN ('Journal', 'Conference')),
  Quartile TEXT CHECK (Quartile IN ('Q1', 'Q2', 'Q3', 'Q4') OR Quartile IS NULL),
  ImpactScore REAL NOT NULL,
  FOREIGN KEY (NodeID) REFERENCES Nodes (NodeID) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS Edges (
  EdgeID INTEGER PRIMARY KEY,
  SourceNodeID INTEGER NOT NULL,
  TargetNodeID INTEGER NOT NULL,
  EdgeType TEXT NOT NULL CHECK (
    EdgeType IN ('AUTHORED', 'AFFILIATED_WITH', 'PUBLISHED_IN', 'CITES', 'CO_AUTHOR')
  ),
  EdgeYear INTEGER,
  Weight REAL,
  MetadataJson TEXT,
  FOREIGN KEY (SourceNodeID) REFERENCES Nodes (NodeID) ON DELETE CASCADE,
  FOREIGN KEY (TargetNodeID) REFERENCES Nodes (NodeID) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS NodeGraphs (
  GraphID INTEGER NOT NULL,
  NodeID INTEGER NOT NULL,
  PRIMARY KEY (GraphID, NodeID),
  FOREIGN KEY (GraphID) REFERENCES Graphs (GraphID) ON DELETE CASCADE,
  FOREIGN KEY (NodeID) REFERENCES Nodes (NodeID) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS EdgeGraphs (
  GraphID INTEGER NOT NULL,
  EdgeID INTEGER NOT NULL,
  PRIMARY KEY (GraphID, EdgeID),
  FOREIGN KEY (GraphID) REFERENCES Graphs (GraphID) ON DELETE CASCADE,
  FOREIGN KEY (EdgeID) REFERENCES Edges (EdgeID) ON DELETE CASCADE
);

CREATE INDEX IF NOT EXISTS idx_nodes_type ON Nodes (NodeType);
CREATE INDEX IF NOT EXISTS idx_edges_type ON Edges (EdgeType);
CREATE INDEX IF NOT EXISTS idx_edges_source ON Edges (SourceNodeID);
CREATE INDEX IF NOT EXISTS idx_edges_target ON Edges (TargetNodeID);
